# my_metronome

./: .gitignore  .gitmodules  README.md
metronome_android/: settings.gradle
metronome_android/app/: build.gradle
metronome_android/app/src/androidTest/java/com/mtai/metronome/: ExampleInstrumentedTest.java
metronome_android/app/src/main/: AndroidManifest.xml
metronome_android/app/src/main/cpp/: CMakeLists.txt  EngineNative.cpp  demo.cpp  demo.h
metronome_android/app/src/main/java/com/mtai/metronome/: AbstractFragment.java  AudioEngine.java  BackgroundRunner.java  MainActivity.java  MetronomeFragment.java  TunerFragment.java
metronome_android/app/src/main/res/layout/: activity_main.xml  metronome.xml  tuner.xml
metronome_android/app/src/main/res/values/: strings.xml
metronome_android/app/src/test/java/com/mtai/metronome/: ExampleUnitTest.java
metronome_android/gradle/wrapper/: gradle-wrapper.properties
metronome_ios/metronome/metronome/: ContentView.swift  DebugLog.swift  metronomeApp.swift  metronomeClass.swift
metronome_ios/metronome/metronome.xcodeproj/: project.pbxproj
metronome_ios/metronome/metronome.xcodeproj/xcshareddata/xcschemes/: metronome.xcscheme
metronome_ios/metronome/metronomeTests/: metronomeTests.swift
metronome_ios/metronome/metronomeUITests/: metronomeUITests.swift  metronomeUITestsLaunchTests.swift
